@@ -26,26 +26,26 @@
 G_BEGIN_DECLS
 
 
-gint          _gimp_unit_cache_get_number_of_units          (void) G_GNUC_INTERNAL;
-gint          _gimp_unit_cache_get_number_of_built_in_units (void) G_GNUC_INTERNAL;
+G_GNUC_INTERNAL gint          _gimp_unit_cache_get_number_of_units          (void);
+G_GNUC_INTERNAL gint          _gimp_unit_cache_get_number_of_built_in_units (void) G_GNUC_CONST;
 
-GimpUnit      _gimp_unit_cache_new               (gchar   *identifier,
-                                                  gdouble  factor,
-                                                  gint     digits,
-                                                  gchar   *symbol,
-                                                  gchar   *abbreviation,
-                                                  gchar   *singular,
-                                                  gchar   *plural) G_GNUC_INTERNAL;
-gboolean      _gimp_unit_cache_get_deletion_flag (GimpUnit unit) G_GNUC_INTERNAL;
-void          _gimp_unit_cache_set_deletion_flag (GimpUnit unit,
-                                                  gboolean deletion_flag) G_GNUC_INTERNAL;
-gdouble       _gimp_unit_cache_get_factor        (GimpUnit unit) G_GNUC_INTERNAL;
-gint          _gimp_unit_cache_get_digits        (GimpUnit unit) G_GNUC_INTERNAL;
-const gchar * _gimp_unit_cache_get_identifier    (GimpUnit unit) G_GNUC_INTERNAL;
-const gchar * _gimp_unit_cache_get_symbol        (GimpUnit unit) G_GNUC_INTERNAL;
-const gchar * _gimp_unit_cache_get_abbreviation  (GimpUnit unit) G_GNUC_INTERNAL;
-const gchar * _gimp_unit_cache_get_singular      (GimpUnit unit) G_GNUC_INTERNAL;
-const gchar * _gimp_unit_cache_get_plural        (GimpUnit unit) G_GNUC_INTERNAL;
+G_GNUC_INTERNAL GimpUnit      _gimp_unit_cache_new               (gchar   *identifier,
+                                                                  gdouble  factor,
+                                                                  gint     digits,
+                                                                  gchar   *symbol,
+                                                                  gchar   *abbreviation,
+                                                                  gchar   *singular,
+                                                                  gchar   *plural);
+G_GNUC_INTERNAL gboolean      _gimp_unit_cache_get_deletion_flag (GimpUnit unit);
+G_GNUC_INTERNAL void          _gimp_unit_cache_set_deletion_flag (GimpUnit unit,
+                                                                  gboolean deletion_flag);
+G_GNUC_INTERNAL gdouble       _gimp_unit_cache_get_factor        (GimpUnit unit);
+G_GNUC_INTERNAL gint          _gimp_unit_cache_get_digits        (GimpUnit unit);
+G_GNUC_INTERNAL const gchar * _gimp_unit_cache_get_identifier    (GimpUnit unit);
+G_GNUC_INTERNAL const gchar * _gimp_unit_cache_get_symbol        (GimpUnit unit);
+G_GNUC_INTERNAL const gchar * _gimp_unit_cache_get_abbreviation  (GimpUnit unit);
+G_GNUC_INTERNAL const gchar * _gimp_unit_cache_get_singular      (GimpUnit unit);
+G_GNUC_INTERNAL const gchar * _gimp_unit_cache_get_plural        (GimpUnit unit);
 
 
 G_END_DECLS
